--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url="project/UFO-level-1/V1.5/homepage.html">
+<meta http-equiv="Refresh" content="0; url="Project/v1.3/Leaflet-Step-1/Homepage.html">
